src/antlr/com/fastyaml/YamlParser.java
// Generated from YamlParser.g4 by ANTLR 4.7.2
package com.fastyaml;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YamlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, BYTES_LITERAL=4, DECIMAL_INTEGER=5, OCT_INTEGER=6, 
		HEX_INTEGER=7, BIN_INTEGER=8, FLOAT_NUMBER=9, IMAG_NUMBER=10, MINUS=11, 
		DOCUMENTSTART=12, DOCUMENTEND=13, AMPERSAND=14, STAR=15, OPEN_PAREN=16, 
		CLOSE_PAREN=17, COMMA=18, COLON=19, OPEN_BRACK=20, CLOSE_BRACK=21, OPEN_BRACE=22, 
		CLOSE_BRACE=23, LITERIAL_STR_IND=24, FOLD_STR_IND=25, DOUBLE_QUOTE=26, 
		ANCHOR=27, ALIAS=28, STRING_MY=29, SKIP1=30, UNKNOWN_CHAR=31, SKIP2=32, 
		NEWLINE_STR_LITERAL=33, NEWLINE_STR_QUOTE=34;
	public static final int
		RULE_file = 0, RULE_document = 1, RULE_list = 2, RULE_listitem = 3, RULE_mappinglist = 4, 
		RULE_key = 5, RULE_value = 6, RULE_value_scalar = 7, RULE_multiline_string = 8, 
		RULE_string_literal = 9, RULE_string_folded = 10, RULE_string_double_quoted = 11, 
		RULE_mapping = 12, RULE_flowlist = 13, RULE_flowmappinglist = 14, RULE_number = 15, 
		RULE_integer = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "document", "list", "listitem", "mappinglist", "key", "value", 
			"value_scalar", "multiline_string", "string_literal", "string_folded", 
			"string_double_quoted", "mapping", "flowlist", "flowmappinglist", "number", 
			"integer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "'-'", 
			null, null, "'&'", "'*'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "NEWLINE", "BYTES_LITERAL", "DECIMAL_INTEGER", 
			"OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "FLOAT_NUMBER", "IMAG_NUMBER", 
			"MINUS", "DOCUMENTSTART", "DOCUMENTEND", "AMPERSAND", "STAR", "OPEN_PAREN", 
			"CLOSE_PAREN", "COMMA", "COLON", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", 
			"CLOSE_BRACE", "LITERIAL_STR_IND", "FOLD_STR_IND", "DOUBLE_QUOTE", "ANCHOR", 
			"ALIAS", "STRING_MY", "SKIP1", "UNKNOWN_CHAR", "SKIP2", "NEWLINE_STR_LITERAL", 
			"NEWLINE_STR_QUOTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YamlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YamlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(YamlParser.EOF, 0); }
		public List<DocumentContext> document() {
			return getRuleContexts(DocumentContext.class);
		}
		public DocumentContext document(int i) {
			return getRuleContext(DocumentContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YamlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YamlParser.NEWLINE, i);
		}
		public List<TerminalNode> DOCUMENTSTART() { return getTokens(YamlParser.DOCUMENTSTART); }
		public TerminalNode DOCUMENTSTART(int i) {
			return getToken(YamlParser.DOCUMENTSTART, i);
		}
		public List<TerminalNode> DOCUMENTEND() { return getTokens(YamlParser.DOCUMENTEND); }
		public TerminalNode DOCUMENTEND(int i) {
			return getToken(YamlParser.DOCUMENTEND, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(34);
					match(NEWLINE);
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			{
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOCUMENTSTART) {
				{
				setState(40);
				match(DOCUMENTSTART);
				setState(42);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(41);
					match(NEWLINE);
					}
					break;
				}
				}
			}

			setState(46);
			document();
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOCUMENTEND) {
				{
				setState(47);
				match(DOCUMENTEND);
				setState(48);
				match(NEWLINE);
				}
			}

			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(51);
						match(NEWLINE);
						}
						}
						setState(56);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					{
					setState(57);
					match(DOCUMENTSTART);
					setState(58);
					match(NEWLINE);
					}
					setState(60);
					document();
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==DOCUMENTEND) {
						{
						setState(61);
						match(DOCUMENTEND);
						setState(63);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
						case 1:
							{
							setState(62);
							match(NEWLINE);
							}
							break;
						}
						}
					}

					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(72);
				match(NEWLINE);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public MappinglistContext mappinglist() {
			return getRuleContext(MappinglistContext.class,0);
		}
		public FlowlistContext flowlist() {
			return getRuleContext(FlowlistContext.class,0);
		}
		public FlowmappinglistContext flowmappinglist() {
			return getRuleContext(FlowmappinglistContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_document);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				mappinglist();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				flowlist();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				flowmappinglist();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				value();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public List<ListitemContext> listitem() {
			return getRuleContexts(ListitemContext.class);
		}
		public ListitemContext listitem(int i) {
			return getRuleContext(ListitemContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YamlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YamlParser.NEWLINE, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(87);
						match(NEWLINE);
						}
						}
						setState(92);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(93);
					listitem();
					setState(95);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(94);
						match(NEWLINE);
						}
						break;
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(99); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListitemContext extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(YamlParser.MINUS, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(YamlParser.INDENT, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(YamlParser.DEDENT, 0); }
		public MappinglistContext mappinglist() {
			return getRuleContext(MappinglistContext.class,0);
		}
		public FlowlistContext flowlist() {
			return getRuleContext(FlowlistContext.class,0);
		}
		public TerminalNode ANCHOR() { return getToken(YamlParser.ANCHOR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(YamlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YamlParser.NEWLINE, i);
		}
		public TerminalNode ALIAS() { return getToken(YamlParser.ALIAS, 0); }
		public ListitemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listitem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterListitem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitListitem(this);
		}
	}

	public final ListitemContext listitem() throws RecognitionException {
		ListitemContext _localctx = new ListitemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listitem);
		int _la;
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(MINUS);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ANCHOR) {
					{
					setState(102);
					match(ANCHOR);
					}
				}

				setState(125);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(105);
					value();
					}
					break;
				case 2:
					{
					setState(107); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(106);
						match(NEWLINE);
						}
						}
						setState(109); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(111);
					match(INDENT);
					setState(112);
					list();
					setState(113);
					match(DEDENT);
					}
					break;
				case 3:
					{
					setState(116); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(115);
						match(NEWLINE);
						}
						}
						setState(118); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(120);
					match(INDENT);
					setState(121);
					mappinglist();
					setState(122);
					match(DEDENT);
					}
					break;
				case 4:
					{
					setState(124);
					flowlist();
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				match(MINUS);
				setState(128);
				match(ALIAS);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				match(MINUS);
				setState(130);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MappinglistContext extends ParserRuleContext {
		public List<MappingContext> mapping() {
			return getRuleContexts(MappingContext.class);
		}
		public MappingContext mapping(int i) {
			return getRuleContext(MappingContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YamlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YamlParser.NEWLINE, i);
		}
		public MappinglistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mappinglist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterMappinglist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitMappinglist(this);
		}
	}

	public final MappinglistContext mappinglist() throws RecognitionException {
		MappinglistContext _localctx = new MappinglistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mappinglist);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(133);
						match(NEWLINE);
						}
						}
						setState(138);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(139);
					mapping();
					setState(141);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
					case 1:
						{
						setState(140);
						match(NEWLINE);
						}
						break;
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(145); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public TerminalNode STRING_MY() { return getToken(YamlParser.STRING_MY, 0); }
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitKey(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_key);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(STRING_MY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Value_scalarContext value_scalar() {
			return getRuleContext(Value_scalarContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YamlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YamlParser.NEWLINE, i);
		}
		public TerminalNode INDENT() { return getToken(YamlParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YamlParser.DEDENT, 0); }
		public Multiline_stringContext multiline_string() {
			return getRuleContext(Multiline_stringContext.class,0);
		}
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public String_foldedContext string_folded() {
			return getRuleContext(String_foldedContext.class,0);
		}
		public String_double_quotedContext string_double_quoted() {
			return getRuleContext(String_double_quotedContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				value_scalar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(NEWLINE);
				setState(151);
				match(INDENT);
				setState(152);
				value_scalar();
				setState(153);
				match(NEWLINE);
				setState(154);
				match(DEDENT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				multiline_string();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(157);
				string_literal();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(158);
				string_folded();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(159);
				string_double_quoted();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_scalarContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode STRING_MY() { return getToken(YamlParser.STRING_MY, 0); }
		public Value_scalarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_scalar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterValue_scalar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitValue_scalar(this);
		}
	}

	public final Value_scalarContext value_scalar() throws RecognitionException {
		Value_scalarContext _localctx = new Value_scalarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_value_scalar);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECIMAL_INTEGER:
			case OCT_INTEGER:
			case HEX_INTEGER:
			case BIN_INTEGER:
			case FLOAT_NUMBER:
			case IMAG_NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				number();
				}
				break;
			case STRING_MY:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(STRING_MY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multiline_stringContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(YamlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YamlParser.NEWLINE, i);
		}
		public TerminalNode INDENT() { return getToken(YamlParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YamlParser.DEDENT, 0); }
		public List<Value_scalarContext> value_scalar() {
			return getRuleContexts(Value_scalarContext.class);
		}
		public Value_scalarContext value_scalar(int i) {
			return getRuleContext(Value_scalarContext.class,i);
		}
		public List<Multiline_stringContext> multiline_string() {
			return getRuleContexts(Multiline_stringContext.class);
		}
		public Multiline_stringContext multiline_string(int i) {
			return getRuleContext(Multiline_stringContext.class,i);
		}
		public Multiline_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiline_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterMultiline_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitMultiline_string(this);
		}
	}

	public final Multiline_stringContext multiline_string() throws RecognitionException {
		Multiline_stringContext _localctx = new Multiline_stringContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_multiline_string);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DECIMAL_INTEGER) | (1L << OCT_INTEGER) | (1L << HEX_INTEGER) | (1L << BIN_INTEGER) | (1L << FLOAT_NUMBER) | (1L << IMAG_NUMBER) | (1L << STRING_MY))) != 0)) {
				{
				setState(166);
				value_scalar();
				}
			}

			setState(169);
			match(NEWLINE);
			setState(170);
			match(INDENT);
			setState(180); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(180);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,25,_ctx) ) {
					case 1:
						{
						setState(171);
						value_scalar();
						setState(176);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(172);
								match(NEWLINE);
								setState(173);
								value_scalar();
								}
								} 
							}
							setState(178);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
						}
						}
						break;
					case 2:
						{
						setState(179);
						multiline_string();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(182); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,26,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(184);
				match(NEWLINE);
				}
			}

			setState(187);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_literalContext extends ParserRuleContext {
		public TerminalNode LITERIAL_STR_IND() { return getToken(YamlParser.LITERIAL_STR_IND, 0); }
		public List<TerminalNode> STRING_MY() { return getTokens(YamlParser.STRING_MY); }
		public TerminalNode STRING_MY(int i) {
			return getToken(YamlParser.STRING_MY, i);
		}
		public List<TerminalNode> NEWLINE_STR_LITERAL() { return getTokens(YamlParser.NEWLINE_STR_LITERAL); }
		public TerminalNode NEWLINE_STR_LITERAL(int i) {
			return getToken(YamlParser.NEWLINE_STR_LITERAL, i);
		}
		public String_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).enterString_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YamlParserListener ) ((YamlParserListener)listener).exitString_literal(this);
		}
	}
